added FRs regarding profiles and routines

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -257,22 +257,77 @@ characteristics and lists the system constraints.  \plt{This text can likely be
 \subsection{Functional Requirements}
 \noindent \begin{itemize}
 
-\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:] \plt{Requirements
-    for the inputs that are supplied by the user.  This information has to be
-    explicit.}
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: Template
+\\ Rational:
+\\ Fit Criterion
 
-\item[R\refstepcounter{reqnum}\thereqnum \label{R_OutputInputs}:] \plt{It isn't
-    always required, but often echoing the inputs as part of the output is a
-    good idea.}
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow the user to create a workout routine.
+\\ Rational: To allow the user to save their own workout routines.
+\\ Fit Criterion: The user created routines are accessable after creation.
 
-\item[R\refstepcounter{reqnum}\thereqnum \label{R_Calculate}:] \plt{Calculation
-    related requirements.}
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall record a workout routine created by a user. 
+\\ Rational: To be able to store a routine to potentially share the routine with other users.
+\\ Fit Criterion: On creation of a workout routine, the data for the routine should be accessable by the system.
 
-\item[R\refstepcounter{reqnum}\thereqnum \label{R_VerifyOutput}:]
-  \plt{Verification related requirements.}
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow the user to publically post a workout routine.
+\\ Rational: To be able to display their workout routine to other users.
+\\ Fit Criterion: On publication of a routine, another user should be able to access and view the routine.
 
-\item[R\refstepcounter{reqnum}\thereqnum \label{R_Output}:] \plt{Output related
-    requirements.}
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The product shall allow a user to update a workout routine.
+\\ Rational: For users to be able to change quantifiers or routine properties.
+\\ Fit Criterion:
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow a user to track their current workout progress.
+\\ Rational: To allow a user to keep track of their current workout.
+\\ Fit Criterion:
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The product shall allow a user to browse workout routines.
+\\ Rational: To make publicly posted workout routines discoverable and for users to find routines that cater their fitness goals.
+\\ Fit Criterion:
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The product should allow a user to save another user's public workout routine.
+\\ Rational: To allow a user to save a workout routine for later use.
+\\ Fit Criterion:
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system should allow a user to create a profile.
+\\ Rational: To display social, informational content to other users.
+\\ Fit Criterion
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow a user to edit their profile.
+\\ Rational: To update any information regarding the user profile.
+\\ Fit Criterion
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow a user to view another user's profile.
+\\ Rational: To allow a user to determine if another user has similar fitness goals or similar workout routines.
+\\ Fit Criterion:
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The product shall record the previous workouts of a user.
+\\ Rational: To store all user input data for future display of fitness progress for the user.
+\\ Fit Criterion:
+
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The product shall display fitness progress regarding various exercises.
+\\ Rational: To help the user determine progress towards fitness goals.
+\\ Fit Criterion:
+
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: 
+\\ Rational:
+\\ Fit Criterion:
 
 \end{itemize}
 
