--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -236,7 +236,7 @@ N/A
 \subsection{Naming Conventions and Terminology}
 Below is a glossary of terms, acronyms and abbreviations used by stakeholders involved in the product's scope:
 \begin{itemize}
-	\item \textbf{Exercise: } An entity with an optional description and any combination of the following quantifiers: Reps, Sets, Weight, Distance, Supersets, Dropsets. 
+	\item \textbf{Exercise: } An entity with an optional description and any combination of the following quantifiers: Repetitions, Sets, Weight, Distance. 
 	\item \textbf{Routine: } A routine (or workout routine) is composed of a sequence of exercises performed in order.
 \end{itemize}
 \subsection{Relevant Facts and Assumptions}
