--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -236,6 +236,7 @@ N/A
 \subsection{Naming Conventions and Terminology}
 Below is a glossary of terms, acronyms and abbreviations used by stakeholders involved in the product's scope:
 \begin{itemize}
+	\item \textbf{Repetitions: } The number of times a motion will be repeated.
 	\item \textbf{Exercise: } An entity with an optional description and any combination of the following quantifiers: Repetitions, Sets, Weight, Distance. 
 	\item \textbf{Routine: } A routine (or workout routine) is composed of a sequence of exercises performed in order.
 \end{itemize}
