--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -171,85 +171,77 @@ Date 2 & 1.1 & Notes\\
 
 \section{Project Constraints}
 \subsection{Mandated Constraints} 
+\subsubsection{Solution Constraints}
+\begin{enumerate}
+	\item
+	\textbf{Description: } The product shall operate its back-end server with Node.js.
+	Body \\
+	\textbf{Rationale: } The product depends on the functionality provided by many libraries unique to Node.js.
+	Body \\
+	\textbf{Fit Criterion: } All back-end server libraries used are Node.js libraries, with a Node.js back-end.
+	Body \\
+\end{enumerate}
+\subsubsection{Implementation Environment of the Current System}
+The product will be launched as a web-app on the internet, and as a mobile app. There is no hardware or otherwise physical integration of the product.
+\subsubsection{Partner or Collaborative Applications}
+N/A
+\subsubsection{Off-the-Shelf Software}
+N/A
+\subsubsection{Anticipated Workplace Environment}
+N/A
+\subsubsection{Schedule Constraints}
+The product timeline will follow the schedule as laid out in the course outline by Dr. Smith (dates listed for 2022):
+\noindent \begin{tabular}{ p{9.7cm} l r}
+	
+	Team Formed, Project Selected & September 19 & 0\% \\
+	
+	Problem Statement, Development Plan & September 26 &
+	2\% \\
+	
+	Requirements Document Revision 0 & October 5 & 5$\%^{\dagger, \ddagger}$ \\
+	
+	Hazard Analysis 0 & October 19 & 3$\%^\dagger$ \\
+	
+	V\&V Plan Revision 0 & November 2 & 5$\%^{\dagger, \ddagger}$ \\
+	
+	Proof of Concept Demonstration & November 14--25 & 5$\%^*$ \\
+	
+	Design Document Revision 0 & January 18 & 5$\%^{\dagger, \ddagger}$ \\
+	
+	Revision 0 Demonstration & February 6--February 17 & 10$\%^*$\\
+	
+	V\&V Report Revision 0 & March 8 & 5$\%^{\dagger, \ddagger}$ \\
+	
+	Final Demonstration (Revision 1) & March 20--March 31 &  20$\%^*$ \\
+	
+	EXPO Demonstration & April TBD & 10$\%^*$ \\
+	
+	Final Documentation (Revision 1)\newline 
+	- Problem Statement\newline
+	- Development Plan\newline
+	- Requirements Document\newline
+	- Hazard Analysis\newline
+	- Design Document\newline
+	- V\&V Plan\newline
+	- V\&V Report\newline
+	- User's Guide\newline
+	- Source Code\newline &  April 5 & 30$\%^{*, \ddagger}$\\
+	
+\end{tabular}
+\subsubsection{Budget Constraints}
+N/A
+\subsubsection{Enterprise Constraints}
+N/A
+
 \subsection{Naming Conventions and Terminology}
+Below is a glossary of terms, acronyms and abbreviations used by stakeholders involved in the product's scope:
+\begin{itemize}
+	\item \textbf{Repetitions: } The number of times a motion will be repeated.
+	\item \textbf{Exercise: } An entity describing a physical movement to be performed with optional descriptors and any combination of the following quantifiers: Repetitions, Sets, Weight, Distance, Time, and Rest Time. 
+	\item \textbf{Routine: } A routine (or workout routine) is composed of a sequence of exercises performed in order.
+\end{itemize}
 \subsection{Relevant Facts and Assumptions}
-
-\section{General System Description}
-
-This section provides general information about the system.  It identifies the
-interfaces between the system and its environment, describes the user
-characteristics and lists the system constraints.  \plt{This text can likely be
-  borrowed verbatim.}
-
-\plt{The purpose of this section is to provide general information about the
-  system so the specific requirements in the next section will be easier to
-  understand. The general system description section is designed to be
-  changeable independent of changes to the functional requirements documented in
-  the specific system description. The general system description provides a
-  context for a family of related models.  The general description can stay the
-  same, while specific details are changed between family members.}
-
-\subsection{System Context}
-
-\plt{Your system context will include a figure that shows the abstract view of
-  the software.  Often in a scientific context, the program can be viewed
-  abstractly following the design pattern of Inputs $\rightarrow$ Calculations
-  $\rightarrow$ Outputs.  The system context will therefore often follow this
-  pattern.  The user provides inputs, the system does the calculations, and then
-  provides the outputs to the user.  The figure should not show all of the
-  inputs, just an abstract view of the main categories of inputs (like material
-  properties, geometry, etc.).  Likewise, the outputs should be presented from
-  an abstract point of view.  In some cases the diagram will show other external
-  entities, besides the user.  For instance, when the software product is a
-  library, the user will be another software program, not an actual end user.
-  If there are system constraints that the software must work with external
-  libraries, these libraries can also be shown on the System Context diagram.
-  They should only be named with a specific library name if this is required by
-  the system constraint.}
-
-\begin{figure}[h!]
-\begin{center}
- \includegraphics[width=0.6\textwidth]{SystemContextFigure}
-\caption{System Context}
-\label{Fig_SystemContext} 
-\end{center}
-\end{figure}
-
-\plt{For each of the entities in the system context diagram its responsibilities
-  should be listed.  Whenever possible the system should check for data quality,
-  but for some cases the user will need to assume that responsibility.  The list
-  of responsibilities should be about the inputs and outputs only, and they
-  should be abstract.  Details should not be presented here.  However, the
-  information should not be so abstract as to just say ``inputs'' and
-  ``outputs''.  A summarizing phrase can be used to characterize the inputs.
-  For instance, saying ``material properties'' provides some information, but it
-  stays away from the detail of listing every required properties.}
-
-\begin{itemize}
-\item User Responsibilities:
-\begin{itemize}
-\item 
-\end{itemize}
-\item \progname{} Responsibilities:
-\begin{itemize}
-\item Detect data type mismatch, such as a string of characters instead of a
-  floating point number
-\item 
-\end{itemize}
-\end{itemize}
-
-\subsection{System Constraints}
-
-\plt{System constraints differ from other type of requirements because they
-	limit the developers' options in the system design and they identify how the
-	eventual system must fit into the world. This is the only place in the SRS
-	where design decisions can be specified.  That is, the quality requirement for
-	abstraction is relaxed here.  However, system constraints should only be
-	included if they are truly required.}
-
-\subsection{System Scope}
-
-
+N/A
 \section{Functional Requirements}
 \subsection{The Scope of the Work}
 \subsection{Business Data Model and Data Directory}
