--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -128,42 +128,293 @@
 
 \begin{document}
 	
-	\title{Software Requirements Specification for \progname: subtitle describing
-		software} 
-	\author{\authname}
-	\date{\today}
-	
-	\maketitle
-	
-	~\newpage
-	
-	\pagenumbering{roman}
-	
-	\tableofcontents
-	
-	~\newpage
-	
-	\section*{Revision History}
-	
-	\begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
-		\toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
-		\midrule
-		Date 1 & 1.0 & Notes\\
-		Date 2 & 1.1 & Notes\\
-		\bottomrule
-	\end{tabularx}
-	
-	~\newpage
-	
-	
-	\section{The Purpose of the Project}
-	\subsection{The User Business or Background of the Project Effort}
-	\subsection{Goals of the Project}
-	
-	
-	\section{Project Drivers}
-	\subsection{The Purpose of the Project}
-	\subsection{Stakeholders}
+\maketitle
+
+~\newpage
+
+\pagenumbering{roman}
+
+\tableofcontents
+
+~\newpage
+
+\section*{Revision History}
+
+\begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
+\toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
+\midrule
+Date 1 & 1.0 & Notes\\
+Date 2 & 1.1 & Notes\\
+\bottomrule
+\end{tabularx}
+
+~\newpage
+
+
+\section{The Purpose of the Project}
+\subsection{The User Business or Background of the Project Effort}
+\subsection{Goals of the Project}
+
+
+\section{Project Drivers}
+\subsection{The Purpose of the Project}
+\subsection{Stakeholders}
+\begin{enumerate}
+	\item Fitness Enthusiasts - Anyone interested in exploring other fitness routines, creating their own routines, and tracking their own personal progression towards goals.
+	\item Personal Trainers - Olympian provides the ideal platform for trainers to share routines and goals with their clients.
+	\item Fitness Advertisers - One avenue of monetization that Olympian could take is running advertisements. Although these advertisements could fall into any category, the largest stakeholders will be Fitness Advertisers,
+	as the users of Olympian will be heavily involved with fitness, and thus most likely to buy fitness products.
+\end{enumerate} 
+
+\section{Project Constraints}
+\subsection{Mandated Constraints} 
+\subsection{Naming Conventions and Terminology}
+\subsection{Relevant Facts and Assumptions}
+
+\section{General System Description}
+
+This section provides general information about the system.  It identifies the
+interfaces between the system and its environment, describes the user
+characteristics and lists the system constraints.  \plt{This text can likely be
+  borrowed verbatim.}
+
+\plt{The purpose of this section is to provide general information about the
+  system so the specific requirements in the next section will be easier to
+  understand. The general system description section is designed to be
+  changeable independent of changes to the functional requirements documented in
+  the specific system description. The general system description provides a
+  context for a family of related models.  The general description can stay the
+  same, while specific details are changed between family members.}
+
+\subsection{System Context}
+
+\plt{Your system context will include a figure that shows the abstract view of
+  the software.  Often in a scientific context, the program can be viewed
+  abstractly following the design pattern of Inputs $\rightarrow$ Calculations
+  $\rightarrow$ Outputs.  The system context will therefore often follow this
+  pattern.  The user provides inputs, the system does the calculations, and then
+  provides the outputs to the user.  The figure should not show all of the
+  inputs, just an abstract view of the main categories of inputs (like material
+  properties, geometry, etc.).  Likewise, the outputs should be presented from
+  an abstract point of view.  In some cases the diagram will show other external
+  entities, besides the user.  For instance, when the software product is a
+  library, the user will be another software program, not an actual end user.
+  If there are system constraints that the software must work with external
+  libraries, these libraries can also be shown on the System Context diagram.
+  They should only be named with a specific library name if this is required by
+  the system constraint.}
+
+\begin{figure}[h!]
+\begin{center}
+ \includegraphics[width=0.6\textwidth]{SystemContextFigure}
+\caption{System Context}
+\label{Fig_SystemContext} 
+\end{center}
+\end{figure}
+
+\plt{For each of the entities in the system context diagram its responsibilities
+  should be listed.  Whenever possible the system should check for data quality,
+  but for some cases the user will need to assume that responsibility.  The list
+  of responsibilities should be about the inputs and outputs only, and they
+  should be abstract.  Details should not be presented here.  However, the
+  information should not be so abstract as to just say ``inputs'' and
+  ``outputs''.  A summarizing phrase can be used to characterize the inputs.
+  For instance, saying ``material properties'' provides some information, but it
+  stays away from the detail of listing every required properties.}
+
+\begin{itemize}
+\item User Responsibilities:
+\begin{itemize}
+\item 
+\end{itemize}
+\item \progname{} Responsibilities:
+\begin{itemize}
+\item Detect data type mismatch, such as a string of characters instead of a
+  floating point number
+\item 
+\end{itemize}
+\end{itemize}
+
+\subsection{System Constraints}
+
+\plt{System constraints differ from other type of requirements because they
+	limit the developers' options in the system design and they identify how the
+	eventual system must fit into the world. This is the only place in the SRS
+	where design decisions can be specified.  That is, the quality requirement for
+	abstraction is relaxed here.  However, system constraints should only be
+	included if they are truly required.}
+
+\subsection{System Scope}
+
+
+\section{Functional Requirements}
+\subsection{The Scope of the Work}
+\subsection{Business Data Model and Data Directory}
+\subsection{The Scope of the Product}
+\subsection{Functional Requirements}
+\noindent \begin{itemize}
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: Template
+\\ Rational:
+\\ Fit Criterion
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow the user to create a workout routine.
+\\ Rational: To allow the user to save their own workout routines.
+\\ Fit Criterion: The user created routines are accessible after creation.
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow the user to add and remove individual exercises in order to a created workout routine, with a maximum of 20 exercises per workout routine.
+\\ Rational: A workout routine is composed of a sequence of exercises performed in order, which the user should able to add and remove as they wish to create the desired routine.
+\\ Fit Criterion: The user is able to add and remove exercises from a created workout routine.
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow the user to add or remove quantifiers to a given exercise.
+\\ Rational: A single exercise requires quantifiers including but not limited to sets, reps, weight (light, medium, heavy), time, rest time to adequately specify how it is to be performed within a given routine.
+\\ Fit Criterion: The user is able to add quantifiers to a given exercise.
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow the user to add ``hints'' to a given exercise. A ``hint'' is a strictly text less than 500 characters.
+\\ Rational: The user should be able to add hints, tips, tricks, and finer workout descriptions to a given exercise.
+\\ Fit Criterion: 
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall store a workout routine created by a user. 
+\\ Rational: To be able to store a routine to potentially share the routine with other users.
+\\ Fit Criterion: On creation of a workout routine, the data for the routine should be accessible by the system.
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow the user to publicly post a workout routine.
+\\ Rational: To be able to display their workout routine to other users.
+\\ Fit Criterion: On publication of a routine, another user should be able to access and view the routine.
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The product shall allow a user to update a workout routine.
+\\ Rational: For users to be able to change quantifiers or routine properties.
+\\ Fit Criterion:
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow a user to save and view a performed workout.
+\\ Rational: To allow a user to keep track of their current workout, and review their previous workouts when doing them again.
+This is especially helpful for ensuring progressive overload. That is, doing a little bit more than last time.
+\\ Fit Criterion: The user is able to save a performed workout and review that data in the future.
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The product shall allow a user to browse workout routines.
+\\ Rational: To make publicly posted workout routines discoverable and for users to find routines that cater their fitness goals.
+\\ Fit Criterion:
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The product should allow a user to save another user's public workout routine.
+\\ Rational: To allow a user to save a workout routine for later use.
+\\ Fit Criterion:
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system should allow a user to create a profile.
+\\ Rational: To display social, informational content to other users.
+\\ Fit Criterion:
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow a user to edit their profile.
+\\ Rational: To update any information regarding the user profile.
+\\ Fit Criterion
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The system shall allow a user to view another user's profile.
+\\ Rational: To allow a user to determine if another user has similar fitness goals or similar workout routines.
+\\ Fit Criterion:
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The product shall record the previous workouts of a user.
+\\ Rational: To store all user input data for future display of fitness progress for the user.
+\\ Fit Criterion:
+
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: The product shall display fitness progress regarding various exercises.
+\\ Rational: To help the user determine progress towards fitness goals.
+\\ Fit Criterion:
+
+
+\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
+Description: 
+\\ Rational:
+\\ Fit Criterion:
+
+\end{itemize}
+
+\plt{Every IM should map to at least one requirement, but not every requirement
+  has to map to a corresponding IM.}
+
+\section{Nonfunctional Requirements}
+
+\plt{List your nonfunctional requirements.  You may consider using a fit
+  criterion to make them verifiable.}
+\plt{The goal is for the nonfunctional requirements to be unambiguous, abstract
+  and verifiable.  This isn't easy to show succinctly, so a good strategy may be
+to give a ``high level'' view of the requirement, but allow for the details to
+be covered in the Verification and Validation document.}
+\plt{An absolute requirement on a quality of the system is rarely needed.  For
+  instance, an accuracy of 0.0101 \% is likely fine, even if the requirement is
+  for 0.01 \% accuracy.  Therefore, the emphasis will often be more on
+  describing now well the quality is achieved, through experimentation, and
+  possibly theory, rather than meeting some bar that was defined a priori.}
+\plt{You do not need an entry for correctness in your NFRs.  The purpose of the
+  SRS is to record the requirements that need to be satisfied for correctness.
+  Any statement of correctness would just be redundant. Rather than discuss
+  correctness, you can characterize how far away from the correct (true)
+  solution you are allowed to be.  This is discussed under accuracy.}
+\subsection{Look and Feel Requirements}
+\subsection{Usability and Humanity Requirements}
+\subsection{Performance Requirements}
+\subsection{Operational and Environmental Requirements}
+\subsection{Maintainability and Support Requirements}
+\subsection{Security Requirements}
+\subsection{Cultural Requirements}
+\subsection{Compliance Requirements}
+
+\noindent \begin{itemize}
+
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Accuracy}:]
+  \textbf{Accuracy} \plt{Characterize the accuracy by giving the context/use for
+    the software.  Maybe something like, ``The accuracy of the computed
+    solutions should meet the level needed for $<$engineering or scientific
+    application$>$.  The level of accuracy achieved by \progname{} shall be
+    described following the procedure given in Section~X of the Verification and
+    Validation Plan.''  A link to the VnV plan would be a nice extra.}
+
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Usability}:] \textbf{Usability}
+  \plt{Characterize the usability by giving the context/use for the software.
+    You should likely reference the user characteristics section.  The level of
+    usability achieved by the software shall be described following the
+    procedure given in Section~X of the Verification and Validation Plan.  A
+    link to the VnV plan would be a nice extra.}
+
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Maintainability}:]
+  \textbf{Maintainability} \plt{The effort required to make any of the likely
+    changes listed for \progname{} should be less than FRACTION of the original
+    development time.  FRACTION is then a symbolic constant that can be defined
+    at the end of the report.}
+
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Portability}:]
+  \textbf{Portability} \plt{This NFR is easier to write than the others.  The
+    systems that \progname{} should run on should be listed here.  When possible
+    the specific versions of the potential operating environments should be
+    given.  To make the NFR verifiable a statement could be made that the tests
+    from a given section of the VnV plan can be successfully run on all of the
+    possible operating environments.}
+
+\item Other NFRs that might be discussed include verifiability,
+  understandability and reusability.
+
+\end{itemize}
+
+
+\section{Use cases}
+
+\begin{itemize}
+	\item View posted workout routine 
 	\begin{enumerate}
 		\item Fitness Enthusiasts - Anyone interested in exploring other fitness
 		routines, creating their own routines, and tracking their own personal
