--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -174,12 +174,9 @@ Date 2 & 1.1 & Notes\\
 \subsubsection{Solution Constraints}
 \begin{enumerate}
 	\item
-	\textbf{Description: } The product shall operate its back-end server with Node.js.
-	Body \\
-	\textbf{Rationale: } The product depends on the functionality provided by many libraries unique to Node.js.
-	Body \\
-	\textbf{Fit Criterion: } All back-end server libraries used are Node.js libraries, with a Node.js back-end.
-	Body \\
+	\textbf{Description: } The product shall operate its back-end server with Node.js. \\
+	\textbf{Rationale: } The product depends on the functionality provided by many libraries unique to Node.js. \\
+	\textbf{Fit Criterion: } All back-end server libraries used are Node.js libraries, with a Node.js back-end. \\
 \end{enumerate}
 \subsubsection{Implementation Environment of the Current System}
 The product will be launched as a web-app on the internet, and as a mobile app. There is no hardware or otherwise physical integration of the product.
