fixed alignment of table

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -190,8 +190,9 @@ N/A
 \subsubsection{Anticipated Workplace Environment}
 N/A
 \subsubsection{Schedule Constraints}
-The product timeline will follow the schedule as laid out in the course outline by Dr. Smith (dates listed for 2022):
-\noindent \begin{tabular}{ p{9.7cm} l r}
+The product timeline will follow the schedule as laid out in the course outline by Dr. Smith. \\
+\newline
+\begin{tabular}{ p{9.7cm} l r}
 	
 	Team Formed, Project Selected & September 19 & 0\% \\
 	
