--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -270,9 +270,9 @@ Description: The system shall allow the user to add or remove quantifiers to a g
 \\ Fit Criterion: The user is able to add quantifiers to a given exercise.
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
-Description: The system shall allow the user to add ``hints'' to a given exercise. A ``hint'' is a strictly text less than 500 characters.
+Description: The system shall allow the user to add a ``hint'' section to a given exercise. A ``hint'' is a strictly text less than 500 characters.
 \\ Rational: The user should be able to add hints, tips, tricks, and finer workout descriptions to a given exercise.
-\\ Fit Criterion: 
+\\ Fit Criterion: The user is able to attach a hint to each exercise in a workout routine.
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 Description: The system shall store a workout routine created by a user. 
@@ -321,7 +321,7 @@ Description: The system shall allow a user to search for and view another user's
 \\ Fit Criterion: The user is able to view the profile of another user after searching for the target profile username.
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
-Description: The system shall allow the user to create and view a goal in the form of an exercise and a metric pair. For example, "Bench press - 100kg".
+Description: The system shall allow the user to create and view a goal in the form of an exercise and a metric pair. For example, ``Bench press - 100kg".
 \\ Rational: This allows the user to set and witness progression towards their fitness goals
 \\ Fit Criterion: If the user is able to create and view goals.
 
@@ -331,7 +331,7 @@ Description: The system shall allow the user to create progress points towards a
 \\ Fit Criterion: The user is able to create progress points towards affiliated with a specific goal.
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
-Description: A progress point must be associated with a one specific goal, and must exist as a date metric pair. For example, "09/04/22 - 96kg" under a "Bench Press - 100kg" goal. The metric type must match the goal metric type, for example kg.
+Description: A progress point must be associated with a one specific goal, and must exist as a date metric pair. For example, ``09/04/22 - 96kg" under a ``Bench Press - 100kg" goal. The metric type must match the goal metric type, for example kg.
 \\ Rational: Progress points must be simple to enter so that the resultant data can be easily visualized.
 \\ Fit Criterion: Progress points can only exist as a date-metric pair with the metric type matching the associated goal metric type.
 
@@ -482,7 +482,7 @@ be covered in the Verification and Validation document.}
 		``outputs''.  A summarizing phrase can be used to characterize the inputs.
 		For instance, saying ``material properties'' provides some information, but it
 		stays away from the detail of listing every required properties.}
-	
+\end{itemize}
 	\begin{itemize}
 		\item User Responsibilities:
 		\begin{itemize}
@@ -616,7 +616,7 @@ be covered in the Verification and Validation document.}
 		\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 		Description: The product shall allow a user to browse workout routines.
 		\\ Rational: To make publicly posted workout routines discoverable and for users to find routines that cater their fitness goals.
-		\\ Fit Criterion: Public workout routines should be accessable for user viewing such that users can view posted routines.
+		\\ Fit Criterion: Public workout routines should be accessible for user viewing such that users can view posted routines.
 		
 		\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 		Description: The product should allow a user to save another user's public workout routine.
@@ -636,24 +636,18 @@ be covered in the Verification and Validation document.}
 		\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 		Description: The system shall allow a user to view another user's profile.
 		\\ Rational: To allow a user to determine if another user has similar fitness goals or similar workout routines.
-		\\ Fit Criterion: On selecting a user profile, all publicly displayed data should be accessable by the user.
+		\\ Fit Criterion: On selecting a user profile, all publicly displayed data should be accessible by the user.
 		
 		\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 		Description: The product shall record the previous workouts of a user.
 		\\ Rational: To store all user input data for future display of fitness progress for the user. 
-		\\ Fit Criterion: On completion of a user workout, the data for the workout should be accessable by the system and the user.
-		
+		\\ Fit Criterion: On completion of a user workout, the data for the workout should be accessible by the system and the user.
 		
 		\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 		Description: The product shall display fitness progress regarding various exercises.
 		\\ Rational: To help the user determine progress towards fitness goals.
-		\\ Fit Criterion: Previous fitness progress completed by a user should be accessable up to a minimum of the previous 30 days.
+		\\ Fit Criterion: Previous fitness progress completed by a user should be accessible up to a minimum of the previous 30 days.
 		
-		
-		\item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
-		Description: 
-		\\ Rational:
-		\\ Fit Criterion:
 		
 	\end{itemize}
 	
