--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -127,6 +127,10 @@
 }
 
 \begin{document}
+
+\title{Software Requirements Specification for \progname: subtitle describing software} 
+\author{\authname}
+\date{\today}
 	
 \maketitle
 
