Add contrast NFR

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -326,6 +326,9 @@ be covered in the Verification and Validation document.}
 \noindent \begin{itemize}
 	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
 	The product shall be usable by users with hearing loss or partial blindness.
+\noindent \begin{itemize}
+	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+	The product shall make use of sufficiently contrasting colours.
 \end{itemize}
 \subsection{Performance Requirements}
 \subsection{Operational and Environmental Requirements}
