Add Look and Feel, Usability and Humanity NFRs (#25)
* Add Look and Feel, Usability and Humanity NFRs

* Add contrast NFR

Co-authored-by: JaredB <bentvelj@mcmaster.ca>

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -287,7 +287,49 @@ be covered in the Verification and Validation document.}
   correctness, you can characterize how far away from the correct (true)
   solution you are allowed to be.  This is discussed under accuracy.}
 \subsection{Look and Feel Requirements}
+\subsubsection{Appearance Requirements}
+\noindent \begin{itemize}
+	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+	The product shall be attractive to a young audience (teenagers, adults in their 20s and 30s).
+\end{itemize}
+\subsubsection{Style Requirements}
+\noindent \begin{itemize}
+	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+	The product shall be appear minimal and straightforward.
+\end{itemize}
 \subsection{Usability and Humanity Requirements}
+\subsubsection{Ease of Use Requirements}
+\noindent \begin{itemize}
+	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+	The product shall be easy for teenagers to use.
+	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+	The product shall be unintrusive and nondisruptive to use while exercising.
+\end{itemize}
+\subsubsection{Personalization and Internationalization Requirements}
+\noindent \begin{itemize}
+	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+	The product shall allow the user to select a chosen language.
+	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+	The product shall retain the user's selected exercise preferences.
+\end{itemize}
+\subsubsection{Learning Requirements}
+\noindent \begin{itemize}
+	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+	The product shall be able to be used by untrained fitness enthusiasts and amateurs alike, who receive no training before using it.
+\end{itemize}
+\subsubsection{Understandability and Politeness Requirements}
+\noindent \begin{itemize}
+	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+	The product shall use symbols and pictures to provide users with an intuitive and efficient experience.
+\end{itemize}
+\subsubsection{Accessibility Requirements}
+\noindent \begin{itemize}
+	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+	The product shall be usable by users with hearing loss or partial blindness.
+\noindent \begin{itemize}
+	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+	The product shall make use of sufficiently contrasting colours.
+\end{itemize}
 \subsection{Performance Requirements}
 \subsection{Operational and Environmental Requirements}
 \subsection{Maintainability and Support Requirements}
