added the ending to the itemize

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -327,6 +327,7 @@ be covered in the Verification and Validation document.}
 \noindent \begin{itemize}
 	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
 	The product shall be usable by users with hearing loss or partial blindness.
+\end{itemize}
 \noindent \begin{itemize}
 	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
 	The product shall make use of sufficiently contrasting colours.
