--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -818,4 +818,330 @@ be covered in the Verification and Validation document.}
 		member pursue, and why did they make this choice?
 	\end{enumerate}
 	
+	\item Edit Routine
+	\item Remove Routine
+	\item View Workout List
+\end{itemize}
+
+\subsection{Use case Diagram}
+\includegraphics[scale=0.5]{srs_usecase_diagram_routines}
+\newpage
+\includegraphics[scale=0.5]{srs_usecase_diagram_profiles}
+
+\section{Traceability Matrices and Graphs}
+
+The purpose of the traceability matrices is to provide easy references on what
+has to be additionally modified if a certain component is changed.  Every time a
+component is changed, the items in the column of that component that are marked
+with an ``X'' may have to be modified as well.  Table~\ref{Table:trace} shows the
+dependencies of theoretical models, general definitions, data definitions, and
+instance models with each other. Table~\ref{Table:R_trace} shows the
+dependencies of instance models, requirements, and data constraints on each
+other. Table~\ref{Table:A_trace} shows the dependencies of theoretical models,
+general definitions, data definitions, instance models, and likely changes on
+the assumptions.
+
+\plt{You will have to modify these tables for your problem.}
+
+\plt{The traceability matrix is not generally symmetric.  If GD1 uses A1, that
+  means that GD1's derivation or presentation requires invocation of A1.  A1
+  does not use GD1.  A1 is ``used by'' GD1.}
+
+\plt{The traceability matrix is challenging to maintain manually.  Please do
+  your best.  In the future tools (like Drasil) will make this much easier.}
+
+\afterpage{
+\begin{landscape}
+\begin{table}[h!]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+	& \aref{A_OnlyThermalEnergy}& \aref{A_hcoeff}& \aref{A_mixed}& \aref{A_tpcm}& \aref{A_const_density}& \aref{A_const_C}& \aref{A_Newt_coil}& \aref{A_tcoil}& \aref{A_tlcoil}& \aref{A_Newt_pcm}& \aref{A_charge}& \aref{A_InitTemp}& \aref{A_OpRangePCM}& \aref{A_OpRange}& \aref{A_htank}& \aref{A_int_heat}& \aref{A_vpcm}& \aref{A_PCM_state}& \aref{A_Pressure} \\
+\hline
+\tref{T_COE}        & X& & & & & & & & & & & & & & & & & & \\ \hline
+\tref{T_SHE}        & & & & & & & & & & & & & & & & & & & \\ \hline
+\tref{T_LHE}        & & & & & & & & & & & & & & & & & & & \\ \hline
+\dref{NL}           & & X& & & & & & & & & & & & & & & & & \\ \hline
+\dref{ROCT}         & & & X& X& X& X& & & & & & & & & & & & & \\ \hline
+\ddref{FluxCoil}    & & & & & & & X& X& X& & & & & & & & & & \\ \hline
+\ddref{FluxPCM}     & & & X& X& & & & & & X& & & & & & & & & \\ \hline
+\ddref{D_HOF}       & & & & & & & & & & & & & & & & & & & \\ \hline
+\ddref{D_MF}        & & & & & & & & & & & & & & & & & & & \\ \hline
+\iref{ewat}         & & & & & & & & & & & X& X& & X& X& X& & & X \\ \hline
+\iref{epcm}         & & & & & & & & & & & & X& X& & & X& X& X& \\ \hline
+\iref{I_HWAT}       & & & & & & & & & & & & & & X& & & & & X \\ \hline
+\iref{I_HPCM}       & & & & & & & & & & & & & X& & & & & X & \\ \hline
+\lcref{LC_tpcm}     & & & & X& & & & & & & & & & & & & & & \\ \hline
+\lcref{LC_tcoil}    & & & & & & & & X& & & & & & & & & & & \\ \hline
+\lcref{LC_tlcoil}   & & & & & & & & & X& & & & & & & & & & \\ \hline
+\lcref{LC_charge}   & & & & & & & & & & & X& & & & & & & & \\ \hline
+\lcref{LC_InitTemp} & & & & & & & & & & & & X& & & & & & & \\ \hline
+\lcref{LC_htank}    & & & & & & & & & & & & & & & X& & & & \\
+\hline
+\end{tabular}
+\caption{Traceability Matrix Showing the Connections Between Assumptions and Other Items}
+\label{Table:A_trace}
+\end{table}
+\end{landscape}
+}
+
+\begin{table}[h!]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline        
+	& \tref{T_COE}& \tref{T_SHE}& \tref{T_LHE}& \dref{NL}& \dref{ROCT} & \ddref{FluxCoil}& \ddref{FluxPCM} & \ddref{D_HOF}& \ddref{D_MF}& \iref{ewat}& \iref{epcm}& \iref{I_HWAT}& \iref{I_HPCM} \\
+\hline
+\tref{T_COE}     & & & & & & & & & & & & & \\ \hline
+\tref{T_SHE}     & & & X& & & & & & & & & & \\ \hline
+\tref{T_LHE}     & & & & & & & & & & & & & \\ \hline
+\dref{NL}        & & & & & & & & & & & & & \\ \hline
+\dref{ROCT}      & X& & & & & & & & & & & & \\ \hline
+\ddref{FluxCoil} & & & & X& & & & & & & & & \\ \hline
+\ddref{FluxPCM}  & & & & X& & & & & & & & & \\ \hline
+\ddref{D_HOF}    & & & & & & & & & & & & & \\ \hline
+\ddref{D_MF}     & & & & & & & & X& & & & & \\ \hline
+\iref{ewat}      & & & & & X& X& X& & & & X& & \\ \hline
+\iref{epcm}      & & & & & X& & X& & X& X& & & X \\ \hline
+\iref{I_HWAT}    & & X& & & & & & & & & & & \\ \hline
+\iref{I_HPCM}    & & X& X& & & & X& X& X& & X& & \\
+\hline
+\end{tabular}
+\caption{Traceability Matrix Showing the Connections Between Items of Different Sections}
+\label{Table:trace}
+\end{table}
+
+\begin{table}[h!]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+\hline
+	& \iref{ewat}& \iref{epcm}& \iref{I_HWAT}& \iref{I_HPCM}& \ref{sec_DataConstraints}& \rref{R_RawInputs}& \rref{R_MassInputs} \\
+\hline
+\iref{ewat}            & & X& & & & X& X \\ \hline
+\iref{epcm}            & X& & & X& & X& X \\ \hline
+\iref{I_HWAT}          & & & & & & X& X \\ \hline
+\iref{I_HPCM}          & & X& & & & X& X \\ \hline
+\rref{R_RawInputs}     & & & & & & & \\ \hline
+\rref{R_MassInputs}    & & & & & & X& \\ \hline
+\rref{R_CheckInputs}   & & & & & X& & \\ \hline
+\rref{R_OutputInputs}  & X& X& & & & X& X \\ \hline
+\rref{R_TempWater}     & X& & & & & & \\ \hline 
+\rref{R_TempPCM}       & & X& & & & & \\ \hline
+\rref{R_EnergyWater}   & & & X& & & & \\ \hline
+\rref{R_EnergyPCM}     & & & & X& & & \\ \hline
+\rref{R_VerifyOutput}  & & & X& X& & & \\ \hline
+\rref{R_timeMeltBegin} & & X& & & & & \\ \hline
+\rref{R_timeMeltEnd}   & & X& & & & & \\ 
+\hline
+\end{tabular}
+\caption{Traceability Matrix Showing the Connections Between Requirements and Instance Models}
+\label{Table:R_trace}
+\end{table}
+
+The purpose of the traceability graphs is also to provide easy references on
+what has to be additionally modified if a certain component is changed.  The
+arrows in the graphs represent dependencies. The component at the tail of an
+arrow is depended on by the component at the head of that arrow. Therefore, if a
+component is changed, the components that it points to should also be
+changed. Figure~\ref{Fig_ATrace} shows the dependencies of theoretical models,
+general definitions, data definitions, instance models, likely changes, and
+assumptions on each other. Figure~\ref{Fig_RTrace} shows the dependencies of
+instance models, requirements, and data constraints on each other.
+
+\section{Project Issues}
+\subsection{Open Issues}
+\subsection{Off the Shelf Solutions}
+\subsection{New Problems}
+\subsection{Tasks}
+\subsection{Migration to the New Product}
+\subsection{Risks}
+\subsection{Costs}
+\subsection{User Documentation and Training}
+\subsection{Waiting Room}
+\subsection{Ideas for Solutions}
+
+\section{Reflection Appendix}
+
+\subsection{Required Skills and Knowledge}
+\begin{itemize}
+		
+	\item Skill: \textbf{Team management}
+	\\ Rational: In order to organize deadlines, work distribution, project progression and team communication, having good team management principles will guide the team towards a positive and productive environment.
+	\\ Team member: William Lee
+	
+	\item Skill: \textbf{Data \& Database management}
+	\\ Rational: Many components of this project will require data tracking and storage in a secure fashion.
+	\\ Team member: William Lee
+	
+	\item Skill: \textbf{Mobile UI Development}
+	\\ Rational: As a mobile application, this product will need to have a fluid user interface.
+	\\ Team member: Dimitri Tsampiras
+	
+	\item Skill: \textbf{Mobile Functionality Development}
+	\\ Rational: As a mobile application, this product will need knowledge in mobile development techniques and functions.
+	\\ Team member: Matthew McCracken
+	
+	\item Skill: \textbf{Software Communications}
+	\\ Rational: Data distribution and transfering will be required for communication between software layers. Having knowledge towards software communicaton will be required to have efficent communication.
+	\\ Team member: Jared Bentvelson
+	
+	\item Skill: \textbf{Document Organization and Writing}
+	\\ Rational: 
+	\\ Team member: Yuvraj Randhawa
+	
+	\item Skill: \textbf{Software Architecture and Structure}
+	\\ Rational: Having a sound software structure will increase development efficicy, simplicity and organization. With topic knowledge in this area, software management and testing will be made easy saving time and effort for developers.
+	\\ Team member: Bassel Rezkalla	
+	
+	\item Skill: \textbf{Software Abstraction}
+	\\ Rational: Software abstraction will help with efficeny and component organization due to the many potential reusable parts of this project.
+	\\ Team member: Yuvraj Randhawa	
+	
+	
+\end{itemize}
+\subsection{Approaches for Aquiring Skills and Knowledge}
+\begin{itemize}
+	
+	\item Skill: \textbf{Team management}
+	\\ Approach:
+	
+	\item Skill: \textbf{Data \& Database management}
+	\\ Approach: There are many online tutorials and existing solutions for database management to refer and learn from. For Database management, there are many good articles and 
+	
+	\item Skill: \textbf{Mobile UI Development}
+	\\ Approach: Most mobile UI have well documented libraries to refer and learn from. Having design and prototyping sessions with the team before development will help improve good domain knowledge.
+	
+	\item Skill: \textbf{Mobile Functionality Development}
+	\\ Approach: 
+	
+	\item Skill: \textbf{Software Communications}
+	\\ Approach:
+	
+	\item Skill: \textbf{Document Organization and Writing}
+	\\ Approach:
+	
+	\item Skill: \textbf{Software Architecture and Structure}
+	\\ Approach: Refering to common software structures and architecture will help create guide lines for making a catered solution to this product. Many University courses such as McMaster SFWRENG-2AA4 and SFWRENG-3A04 discuss topics surronding software architecture.
+	
+	\item Skill: \textbf{Software Abstraction}
+	\\ Approach: 
+	
+	
+\end{itemize}
+
+\section{Reference Material}
+
+This section records information for easy reference.
+
+
+\subsection{Abbreviations and Acronyms}
+
+\renewcommand{\arraystretch}{1.2}
+\begin{tabular}{l l} 
+	\toprule		
+	\textbf{symbol} & \textbf{description}\\
+	\midrule 
+	A & Assumption\\
+	DD & Data Definition\\
+	GD & General Definition\\
+	GS & Goal Statement\\
+	IM & Instance Model\\
+	LC & Likely Change\\
+	PS & Physical System Description\\
+	R & Requirement\\
+	SRS & Software Requirements Specification\\
+	\progname{} & \plt{put an expanded version of your program name here (as appropriate)}\\
+	T & Theoretical Model\\
+	\bottomrule
+\end{tabular}\\
+
+\plt{Add any other abbreviations or acronyms that you add}
+
+% \begin{figure}[h!]
+% 	\begin{center}
+% 		%\rotatebox{-90}
+% 		{
+% 			\includegraphics[width=\textwidth]{ATrace.png}
+% 		}
+% 		\caption{\label{Fig_ATrace} Traceability Matrix Showing the Connections Between Items of Different Sections}
+% 	\end{center}
+% \end{figure}
+
+
+% \begin{figure}[h!]
+% 	\begin{center}
+% 		%\rotatebox{-90}
+% 		{
+% 			\includegraphics[width=0.7\textwidth]{RTrace.png}
+% 		}
+% 		\caption{\label{Fig_RTrace} Traceability Matrix Showing the Connections Between Requirements, Instance Models, and Data Constraints}
+% 	\end{center}
+% \end{figure}
+
+\newpage
+
+\bibliographystyle {plainnat}
+\bibliography {../../refs/References}
+
+\newpage
+
+\noindent \plt{The following is not part of the template, just some things to consider
+  when filing in the template.}
+
+\noindent \plt{Grammar, flow and \LaTeX advice:
+\begin{itemize}
+\item For Mac users \texttt{*.DS\_Store} should be in \texttt{.gitignore}
+\item \LaTeX{} and formatting rules
+\begin{itemize}
+\item Variables are italic, everything else not, includes subscripts (link to
+  document)
+\begin{itemize}
+\item \href{https://physics.nist.gov/cuu/pdf/typefaces.pdf}{Conventions}
+\item Watch out for implied multiplication
+\end{itemize}
+\item Use BibTeX
+\item Use cross-referencing
+\end{itemize}
+\item Grammar and writing rules
+\begin{itemize}
+\item Acronyms expanded on first usage (not just in table of acronyms)
+\item ``In order to'' should be ``to''
+\end{itemize}
+\end{itemize}}
+
+\noindent \plt{Advice on using the template:
+\begin{itemize}
+\item Difference between physical and software constraints
+\item Properties of a correct solution means \emph{additional} properties, not
+  a restating of the requirements (may be ``not applicable'' for your problem).
+  If you have a table of output constraints, then these are properties of a
+  correct solution.
+\item Assumptions have to be invoked somewhere
+\item ``Referenced by'' implies that there is an explicit reference
+\item Think of traceability matrix, list of assumption invocations and list of
+  reference by fields as automatically generatable
+\item If you say the format of the output (plot, table etc), then your
+  requirement could be more abstract
+\end{itemize}
+}
+
+\newpage{}
+\section*{Appendix --- Reflection}
+
+The information in this section will be used to evaluate the team members on the
+graduate attribute of Lifelong Learning.  Please answer the following questions:
+
+\begin{enumerate}
+  \item What knowledge and skills will the team collectively need to acquire to
+  successfully complete this capstone project?  Examples of possible knowledge
+  to acquire include domain specific knowledge from the domain of your
+  application, or software engineering knowledge, mechatronics knowledge or
+  computer science knowledge.  Skills may be related to technology, or writing,
+  or presentation, or team management, etc.  You should look to identify at
+  least one item for each team member.
+  \item For each of the knowledge areas and skills identified in the previous
+  question, what are at least two approaches to acquiring the knowledge or
+  mastering the skill?  Of the identified approaches, which will each team
+  member pursue, and why did they make this choice?
+\end{enumerate}
+
 \end{document}
