first half of open issues

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -793,10 +793,71 @@ be covered in the Verification and Validation document.}
 	instance models, requirements, and data constraints on each other.
 	
 	\section{Project Issues}
-	\subsection{Open Issues}
-	\subsection{Off the Shelf Solutions}
-	\subsection{New Problems}
-	\subsection{Tasks}
+	\begin{itemize}
+		\item \textbf{Issue 1:} Users may have discomfort using an app to track their workouts over the traditional pen and paper method. The business event of tracking personal quantifiers is of concern with this issue.
+		  
+		\item \textbf{Issue 2:} It may be unfavourable to users with existing programs and workout data to migrate to a new application
+		
+		\item \textbf{Issue 3:} Users personal methods of working out - various quirks and features - may not be covered by the app's program creation.
+		
+		\item \textbf{Issue 4:} There is a concern with the app’s compatibility with various devices. Integral UI/UX features of the app such has haptics, pop ups, dragging features, may not work with various devices hindering the overall experience for some users.
+		
+		\end{itemize}
+		
+		\subsection{Off the Shelf Solutions}
+		\subsubsection{Ready Made Products}
+		
+		\noindent TeamBuildr
+		\begin{itemize}
+		\item Exercise programming app for large groups used at a professional level. Used for teams, specifically at a high level. There is no present social aspect. Paid service. 
+		\item Program creation is a very complex process. This app has a solution that has been tried and tested by multiple users at a high level. 
+		\end{itemize}
+		
+		\noindent JEFIT
+		\begin{itemize}
+		\item App that lets you create and track workouts. No user generated content but has paid template programs. Social aspect that lets you post progress pictures. 
+		\item Could be used as a foundation for adding required features if acquired.
+		\end{itemize}
+		
+		\subsubsection{Reusable Components}
+		
+		\noindent One Rep Max Calculator
+		\begin{itemize}
+		\item The npm library one-rep-max, can be used to satisfy the requirements of providing user statistics. The library offers multiple recognized methods of calculating one rep max. 
+		\item Event: Track Personal Quantifiers 
+		\end{itemize}
+		
+		\noindent Content Based Recommender 
+		\begin{itemize}
+		\item The npm library content-based-recommender can help display recommended content for the user based on user inputted parameters 
+		\item This addresses the business event "filter routines". 
+		\end{itemize}
+		
+		\subsubsection{Products that can be Copied}
+		
+		\noindent Exercise Directory
+		\begin{itemize}
+		\item Provides a bulk directory of various exercises that can be directly copied as there is no legal ownership of an exercise.
+		\end{itemize}
+		
+		\noindent HyperHuman API 
+		\begin{itemize}
+		\item HyperHuman API offers pre-built workout programs that can be used as basic templates. This is especially useful in the beginning stages of the app where user generated content is at a low. 
+		\item This addresses the business event "browse programs". 
+		\end{itemize}
+		
+		\subsection{New Problems}
+		Not applicable.
+		\subsection{Tasks}
+		\begin{itemize}
+		\item Determine which technologies will be used for the creation of this project (frontend framework, server language)
+		\item  app UX wire-frames
+		\item  app UI design mockups
+		\item  app UI components and testing using front end technology
+		\item  Create skeleton of API
+		\item  Revise requirement documents.
+		\item  Implement test report
+		\end{itemize}
 	\subsection{Migration to the New Product}
     The product will be rolled out to the Apple App store first and then added to the Google play store after it has run without issue on the app store.
     This project is new and so no transition period is relevant.
