--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -265,7 +265,7 @@ Description: The system shall allow the user to create a workout routine.
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 Description: The system shall allow the user to add and remove individual exercises in order to a created workout routine, with a maximum of 20 exercises per workout routine.
-\\ Rational: A workout routine is composed of a sequence of exercises performed in order, which the user should able to add and remove as they wish to create the desired routine.
+\\ Rational: A workout routine is composed of a sequence of exercises performed in order, which the user should be able to add and remove as they wish to create the desired routine.
 \\ Fit Criterion: The user is able to add and remove exercises from a created workout routine.
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
