--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -274,7 +274,7 @@ Description: The system shall allow the user to add or remove quantifiers to a g
 \\ Fit Criterion: The user is able to add quantifiers to a given exercise.
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
-Description: The system shall allow the user to add a ``hint'' section to a given exercise. A ``hint'' is a strictly text less than 500 characters.
+Description: The system shall allow the user to add a ``hint'' section to a given exercise. A ``hint'' is strictly text less than 500 characters.
 \\ Rational: The user should be able to add hints, tips, tricks, and finer workout descriptions to a given exercise.
 \\ Fit Criterion: The user is able to attach a hint to each exercise in a workout routine.
 
